spacing fix

--- a/scss/style-mwa.scss
+++ b/scss/style-mwa.scss
@@ -264,6 +264,7 @@ header {
                 display: inline-block;
             }
             ul {
+                margin-bottom: 0;
                 li {
                     
                     margin: 0 0 0 .15rem;
